--- a/package.json
+++ b/package.json
@@ -1,38 +1,40 @@
 {
-  "name": "red-light-green-light",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "test": "jest",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~13.2.0",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/core": "~13.2.0",
-    "@angular/forms": "~13.2.0",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/router": "~13.2.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-builders/jest": "latest",
-    "@angular-devkit/build-angular": "~13.2.0",
-    "@angular/cli": "~13.2.0",
-    "@angular/compiler-cli": "~13.2.0",
-    "@briebug/jest-schematic": "^4.0.0",
-    "@types/jest": "latest",
-    "@types/node": "^12.11.1",
-    "eslint": "^8.8.0",
-    "jest": "latest",
-    "prettier": "2.5.1",
-    "typescript": "~4.5.2"
-  }
+	"name": "red-light-green-light",
+	"version": "0.0.0",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"test": "jest",
+		"test-watch": "jest --watchAll",
+		"test-coverage": "jest --coverage",
+		"build": "ng build",
+		"watch": "ng build --watch --configuration development"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "~13.2.0",
+		"@angular/common": "~13.2.0",
+		"@angular/compiler": "~13.2.0",
+		"@angular/core": "~13.2.0",
+		"@angular/forms": "~13.2.0",
+		"@angular/platform-browser": "~13.2.0",
+		"@angular/platform-browser-dynamic": "~13.2.0",
+		"@angular/router": "~13.2.0",
+		"rxjs": "~7.5.0",
+		"tslib": "^2.3.0",
+		"zone.js": "~0.11.4"
+	},
+	"devDependencies": {
+		"@angular-builders/jest": "latest",
+		"@angular-devkit/build-angular": "~13.2.0",
+		"@angular/cli": "~13.2.0",
+		"@angular/compiler-cli": "~13.2.0",
+		"@briebug/jest-schematic": "^4.0.0",
+		"@types/jest": "latest",
+		"@types/node": "^12.11.1",
+		"eslint": "^8.8.0",
+		"jest": "latest",
+		"prettier": "2.5.1",
+		"typescript": "~4.5.2"
+	}
 }
